make all replica to 1

--- a/es-data-master.yaml.tmpl
+++ b/es-data-master.yaml.tmpl
@@ -22,13 +22,13 @@ spec:
     spec:
       containers:
       - name: es-data-master
-        securityContext:
-          privileged: true
-          capabilities:
-            add:
-              - IPC_LOCK
+        # securityContext:
+        #   privileged: true
+        #   capabilities:
+        #     add:
+        #       - IPC_LOCK
         image: kayrus/docker-elasticsearch-kubernetes:2.4.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         #readinessProbe:
         #  exec:
         #    command:
